--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug 30 01:50:16 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesimpleadsr.c (simple_adsr_reset): added missing reset method,
+	to restart envelope phase and reset trigger/gate history.
+
 Sat Jul 24 05:33:58 2004  Tim Janik  <timj@gtk.org>
 
         * *.[hc]*: fixed if_reject() and if_expect() usage.
