--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 FIXMES:	(release-critical)
+- instead of bse_engine_add_garbage(), the midireceiver needs a BSE_MIDI_RECEIVER_LOCK based callback mechanism (nodes aren't queued from teh BSE thread which invokes the engine gc)
+- disable vinput/vswitch job queueing (except for mono) if Done is not connected
+- queue discard on active module and dismiss transaction. will the module be freed (although the job was not processed)?
 - use only one of stock= or stock-image= in radget files
 - support candidate tooltip in bst_track_synth_dialog_popup() similar to bst_item_seq_dialog_popup()
 - opening new view resets mixer volume
