--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 31 09:37:02 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesource.*:
+	* bsecxxmodule.*: cleanups.
+
 Tue Aug 31 08:50:26 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecxxeffect.*: applied slightly modified patch from stefan.
