--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,12 @@
+Tue Aug 31 23:55:52 2004  Tim Janik  <timj@gtk.org>
+
+	* bsebus.c: added BseTrack and BseBus to the ::inputs candidate
+	type partitions. added missing ::inputs change notifications.
+
+	* bsecore.idl: added TypeSeq and type partitions to PropertyCandidates.
+
+	* bseitem.c: default initialize type partition structure.
+
 Tue Aug 31 12:09:38 2004  Tim Janik  <timj@gtk.org>
 
 	* bsewaverepo.proc:
